# party-box

./: Cargo.toml
src/: main.rs
src/routes/: mod.rs
static/css/: default.css
templates/: base.html.tera  login.html.tera
